[package]
name = "anyhow"
version = "1.0.86"
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["rust-patterns", "no-std"]
description = "Flexible concrete Error type built on std::error::Error"
documentation = "https://docs.rs/anyhow"
edition = "2021"
keywords = ["error", "error-handling"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/anyhow"
resolver = "2"

[features]
default = ["std"]
std = []
core_error = []

[dependencies]
# On compilers older than 1.65, features=["backtrace"] may be used to enable
# backtraces via the `backtrace` crate. This feature has no effect on 1.65+
# besides bringing in an unused dependency, as `std::backtrace` is always
# preferred.
backtrace = { version = "0.3.73", optional = true }

[dev-dependencies]
futures = { version = "0.3", default-features = false }
rustversion = "1.0.17"
syn = { version = "2.0", features = ["full"] }
thiserror = "1.0.63"
trybuild = { version = "1.0.97", features = ["diff"] }

[lib]
doc-scrape-examples = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]
